<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.firebaseapp.EditProfileActivity">


    <ImageView
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
        android:id="@+id/imageViewEditProfilePic"
        android:layout_width="150dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewEditProfilePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:id="@+id/textViewFnameLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:id="@+id/editTextUserFName"
        android:layout_alignBaseline="@+id/textViewFnameLabel"
        android:layout_alignBottom="@+id/textViewFnameLabel"
        android:layout_toRightOf="@+id/textViewFnameLabel"
        android:layout_toEndOf="@+id/textViewFnameLabel"
        android:hint="@string/firstNameHint" />

    <TextView
        android:text="@string/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUserFName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:id="@+id/textViewLnameLabel" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/editTextUserFName"
        android:layout_alignLeft="@+id/editTextUserFName"
        android:layout_alignStart="@+id/editTextUserFName"
        android:layout_marginTop="13dp"
        android:id="@+id/editTextUserLName"
        android:hint="@string/lastNameHint" />

    <TextView
        android:text="@string/gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textViewGenderLabel"
        android:layout_below="@+id/editTextUserLName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <Button
        android:text="@string/btn_update_label"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:id="@+id/buttonUpdate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="170dp" />

    <Button
        android:text="@string/cancelHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonUpdate"
        android:layout_toRightOf="@+id/buttonUpdate"
        android:layout_toEndOf="@+id/buttonUpdate"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/buttonCancel" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:id="@+id/profile_male"
        android:layout_alignTop="@+id/textViewGenderLabel"
        android:layout_alignLeft="@+id/imageViewEditProfilePic"
        android:layout_alignStart="@+id/imageViewEditProfilePic"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:id="@+id/profile_female"
        android:layout_alignTop="@+id/profile_male"
        android:layout_alignLeft="@+id/buttonCancel"
        android:layout_alignStart="@+id/buttonCancel"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:checked="false" />


</RelativeLayout>
