<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.firebaseapp.SignUpActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:id="@+id/editTextLastName"
        android:hint="@string/lastNameHint"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:id="@+id/editTextPassword1"
        android:hint="@string/passwordHint"

        android:layout_below="@+id/editTextEmailID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:id="@+id/editTextEmailID"
        android:hint="@string/emailHint"

        android:layout_below="@+id/editTextLastName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:text="@string/cancelHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCancel"
        android:layout_alignBaseline="@+id/buttonSignUp"
        android:layout_alignBottom="@+id/buttonSignUp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/signUpLabel"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSignUp"
        android:layout_width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp" />



    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:id="@+id/imageViewProfilePic"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:hint="@string/firstNameHint"

        android:layout_below="@+id/imageViewProfilePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Male"
        android:id="@+id/radioButton_male"
        android:checked="false"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Female"
        android:id="@+id/radioButton_female"
        android:layout_alignBottom="@+id/radioButton_male"
        android:layout_centerHorizontal="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:id="@+id/textView"
        android:layout_below="@+id/editTextPassword1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
